I have added a comment

--- a/leanvuex/public/index.html
+++ b/leanvuex/public/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!-- 
+  This is a comment , when the program runs , it will ignore whatever is written here because 
+  they are in an html comment tag
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8">
